io-takamaka-examples/src/main/java/io/takamaka/tests/errors/finalize/C.java
package io.takamaka.tests.errors.finalize;

public class C {

	@Override
	protected void finalize() {} // illegal in Takamaka
}